--- a/themes/scss/theme_B.scss
+++ b/themes/scss/theme_B.scss
@@ -214,7 +214,7 @@ section::after {
 }
 
 .memo {
-    border-top: 0.2rem dashed $main-highlight-color;
+    border-top: 1px dashed $main-highlight-color;
 }
 
 .tips1 {
