Add fs28 and update theme_U

--- a/themes/scss/_main.scss
+++ b/themes/scss/_main.scss
@@ -197,6 +197,10 @@ section {
         font-size: 24px;
     }
 
+    &.fs28 {
+        font-size: 28px;
+    }
+
     &.fs32 {
         font-size: 32px;
     }
