--- a/themes/theme_B.css
+++ b/themes/theme_B.css
@@ -117,6 +117,9 @@ section.fs20 {
 section.fs24 {
   font-size: 24px;
 }
+section.fs28 {
+  font-size: 28px;
+}
 section.fs32 {
   font-size: 32px;
 }
