--- a/themes/theme_U.css
+++ b/themes/theme_U.css
@@ -115,6 +115,9 @@ section.fs20 {
 section.fs24 {
   font-size: 24px;
 }
+section.fs28 {
+  font-size: 28px;
+}
 section.fs32 {
   font-size: 32px;
 }
@@ -384,6 +387,7 @@ section.section_title h1 {
   box-shadow: initial;
   color: #404040;
   text-align: center;
+  border-bottom: 0.1em solid #89c3eb;
 }
 section.section_title h1::after {
   display: none;
